lambda/tests/compile-fail/non-async-main.rs
#[lambda_attributes::lambda]
fn main() {}
