lambda/tests/compile-fail/non-async-main.stderr
error: the async keyword is missing from the function declaration
 --> $DIR/non-async-main.rs:2:1
  |
2 | fn main() {}
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
  |
  = note: consider adding a `main` function to `$DIR/tests/compile-fail/non-async-main.rs`

For more information about this error, try `rustc --explain E0601`.
